--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -183,7 +183,7 @@ a {
 	letter-spacing: 1px;
 
 
-	color: #8833ff;
+	color: #ff0000;
 
 
 }
@@ -194,7 +194,7 @@ a {
 
 	font-size: 22px;
     cursor: pointer;
-    color: #8833ff;
+    color: #ff0000;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -611,7 +611,7 @@ a {
 .sidebar-wrapper .metismenu .mm-active>a {
 
 
-	color: #8833ff;
+	color: #ff0000;
 	
     text-decoration: none;
 	
@@ -922,7 +922,7 @@ a {
 	right: 12px;
 
 
-	background-color: #8833ff;
+	background-color: #ff0000;
 
 
 	z-index: 5;
@@ -1324,7 +1324,7 @@ a {
 .fm-menu .list-group a:hover {
 
 
-	background: #8833ff;
+	background: #ff0000;
 
 
 	color: #ffffff;
@@ -1912,7 +1912,7 @@ a {
 	margin-bottom: 20px;
 
 
-	border-bottom: 1px solid #8833ff
+	border-bottom: 1px solid #ff0000
 
 
 }
@@ -1984,7 +1984,7 @@ a {
 	margin-top: 0;
 
 
-	color: #8833ff
+	color: #ff0000
 
 
 }
@@ -2020,7 +2020,7 @@ a {
 	padding-left: 6px;
 
 
-	border-left: 6px solid #8833ff;
+	border-left: 6px solid #ff0000;
 
 
 	background: #e7f2ff;
@@ -2101,7 +2101,7 @@ a {
 	font-weight: 400;
 
 
-	color: #8833ff;
+	color: #ff0000;
 
 
 	font-size: 1.2em
@@ -2137,7 +2137,7 @@ a {
 	font-size: 1.6em;
 
 
-	background: #8833ff
+	background: #ff0000
 
 
 }
@@ -2155,7 +2155,7 @@ a {
 .invoice table .total {
 
 
-	background: #8833ff;
+	background: #ff0000;
 
 
 	color: #fff
@@ -2212,13 +2212,13 @@ a {
 .invoice table tfoot tr:last-child td {
 
 
-	color: #8833ff;
+	color: #ff0000;
 
 
 	font-size: 1.4em;
 
 
-	border-top: 1px solid #8833ff
+	border-top: 1px solid #ff0000
 
 
 }
@@ -2650,7 +2650,7 @@ a {
 .chat-tab-menu .nav-pills .show>.nav-link {
 
 
-	color: #8833ff;
+	color: #ff0000;
 
 
 	background-color: rgb(0 123 255 / 0%);
@@ -3127,7 +3127,7 @@ a {
 .email-navigation a.list-group-item.active {
 
 
-	color: #8833ff;
+	color: #ff0000;
 
 
 	font-weight: 600;
@@ -3427,10 +3427,10 @@ a {
 .nav-primary.nav-tabs .nav-link.active {
 
 
-	color: #8833ff;
+	color: #ff0000;
 
 
-	border-color: #8833ff #8833ff #fff;
+	border-color: #ff0000 #ff0000 #fff;
 
 
 }
@@ -3957,7 +3957,7 @@ a {
 
 .authentication-header {
     position: absolute;
-    background: #8833ff;
+    background: #ff0000;
     top: 0;
     left: 0;
     right: 0;
@@ -4467,7 +4467,7 @@ input::placeholder {
 
 	background-color: rgb(136 51 255 / 12%);
 
-    color: #8833ff;
+    color: #ff0000;
 
 }
 
@@ -5225,7 +5225,7 @@ input::placeholder {
 	font-size: 24px;
 
 
-	background: #8833ff;
+	background: #ff0000;
 
 
 	box-shadow: 0 0.3rem 0.6rem rgba(0, 0, 0, .13);
