--- a/public/front/assets/css/style.css
+++ b/public/front/assets/css/style.css
@@ -1208,11 +1208,11 @@ blockquote {
     background-image: -o-linear-gradient(top, var(--global--color-heading-light) 34%, #1B1A1A 84%);
     background-image: linear-gradient(180deg, var(--global--color-heading-light) 34%, #1B1A1A 84%);
     opacity: 0.15; }
-/* 
+
 .bg-overlay-theme:before {
   background-image: -webkit-gradient(linear, right top, left top, color-stop(18%, #FF0000), color-stop(70%, var(--global--color-primary)));
   background-image: -o-linear-gradient(right, #FF0000 18%, var(--global--color-primary) 70%);
-  background-image: linear-gradient(-90deg, #FF0000 18%, var(--global--color-primary) 70%); } */
+  background-image: linear-gradient(-90deg, #FF0000 18%, var(--global--color-primary) 70%); }
 
 .bg-overlay-theme2:before {
   background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(6, 22, 51, 0)), color-stop(0%, #1d294d));
